--- a/projets.html
+++ b/projets.html
@@ -12,11 +12,11 @@
         <div>
             <nav>
                 <ul>
-                    <li><a href="file:///C:/Users/HP/Desktop/PROJET%20HTML/PARTIE%20HTML/projet/Acceuil.html">Acceuil</a></li>
-                    <li><a href="file:///C:/Users/HP/Desktop/PROJET%20HTML/PARTIE%20HTML/projet/A%20propos.html">A propos </a></li>
-                    <li><a href="file:///C:/Users/HP/Desktop/PROJET%20HTML/PARTIE%20HTML/projet/projets.html">Projets</a></li>
-                    <li><a href="file:///C:/Users/HP/Desktop/PROJET%20HTML/PARTIE%20HTML/projet/Objectifs2.html">Objectifs</a></li>
-                    <li><a href="file:///C:/Users/HP/Desktop/PROJET%20HTML/PARTIE%20HTML/projet/contact.html">Contacts</a></li>
+                    <li><a href="index.html">Acceuil</a></li>
+                    <li><a href="A%20propos.html">A propos</a></li>
+                    <li><a href="projets.html">Projets</a></li>
+                    <li><a href="Objectifs2.html">Objectifs</a></li>
+                    <li><a href="contact.html">Contacts</a></li>
                 </ul>
             </nav>
         </div>
