--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     <div>
         <nav>
             <ul>
-                <li><a href="projet/index.html">Acceuil</a></li>
+                <li><a href="index.html">Acceuil</a></li>
                 <li><a href="A%20propos.html">A propos</a></li>
                 <li><a href="projets.html">Projets</a></li>
                 <li><a href="Objectifs2.html">Objectifs</a></li>
