--- a/projets.html
+++ b/projets.html
@@ -33,7 +33,7 @@
                     <img src="C1.png" alt="" width="200px">
                     <p>J'ai des connaissances en programmation C ou j'ai eu à réaliser des projets et des programmes bien fonctionnel.</p>
                     <details> <summary>Cliquez ici pour voir mon programme</summary>
-                        <a href="C:\Users\HP\Desktop\PROJET HTML\PARTIE HTML\projet.c">Voir le code</a>
+                        <a href="projet.c">Voir le code</a>
                     </details>
                     <li><h2>Architecture des ordinateurs</h2></li>
                     <img src="ARCHI.jpg" alt="" width="200px">
@@ -45,7 +45,7 @@
                     <p>Si je pratique tous les jours je croix que je deviendrai un des meilleur.</p>
                     <details><summary>Voir mon blog</summary>   
 
-                        <a href="file:///C:/Users/HP/Desktop/exercice/html/GP01.html">Ma première réalisation</a>
+                        <a href="GP01.html">Ma première réalisation</a>
 
                     </details>
             
